--- a/produtor_rural/templates/produtor/dashboard.html
+++ b/produtor_rural/templates/produtor/dashboard.html
@@ -2,18 +2,74 @@
 <html lang="pt-BR">
 
 <head>
+
+    {% load static %}
     <meta charset="UTF-8">
     <title>Dashboard do Produtor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <style>
+        .custom-container {
+            background-color: #0e64bb;
+            /* Cinza claro */
+            border-radius: 10px;
+            /* Bordas arredondadas */
+            padding: 20px;
+            /* Espaçamento interno */
+            margin-bottom: 20px;
+            /* Espaçamento inferior */
+        }
+    </style>
 
 </head>
 
+
+
 <body>
 
-    {% load static %}
+    <div>
 
-    <h1>Dashboard do Produtor</h1>
+        <div class="container text-center .custom-container">
+            <h1>Dashboard do produtor</h1>
+            <div class="row">
+
+                <div class="col md-6">
+
+                    <!-- <canvas id="graficoUsoSolo"></canvas>
+
+                    <script>
+                        const area_agricultavel = {{ area_agricultavel| safe }};
+                        const area_vegetacao = {{ area_vegetacao| safe }};
+                    </script>
+                    <script src="{% static 'js/chart-uso-solo.js' %}"></script> -->
+
+
+                </div>
+
+                <div class="col md-6">
+                    <!-- <script type="application/json" id="estado-data">
+                        {{ estado_count|json_script:"estado_count" }}
+                    </script>
+                    
+                    <canvas id="graficoEstados"></canvas>
+                    <script src="{% static 'js/chart-estados.js' %}"></script>
+               -->
+                </div>
+
+                <div class="col">
+                    Column
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
     <p>Total de Fazendas: {{ total_fazendas }}</p>
     <p>Área Total em Hectares: {{ area_total }}</p>
 
@@ -31,12 +87,24 @@
         {% endfor %}
     </ul>
 
+
+    {% load custom_filters %}
     <h2>Gráfico por Estado</h2>
     <ul>
         {% for item in estado_count %}
         <li>{{ item.estado }}: {{ item.count }}</li>
         {% endfor %}
     </ul>
+
+    <p id="estado_count" style="display: nome;">{{ estado_count }}</p>
+
+    <!-- <img id="estado_chart" src="data:image/png;base64,{% url 'generate_chart' %}" alt="Gráfico por Estado"> -->
+
+
+    <img id="estado_chart" src="{% url 'generate_chart' %}" alt="Gráfico por Estado">
+    
+
+
 
     <h2>Gráfico por Cultura</h2>
     <ul>
@@ -52,13 +120,6 @@
     </ul>
 
 
-    <canvas id="graficoUsoSolo" width="400" height="400"></canvas>
-
-    <script>
-        const area_agricultavel = {{ area_agricultavel| safe }};
-        const area_vegetacao = {{ area_vegetacao| safe }};
-    </script>
-    <script src="{% static 'js/grafico-uso-solo.js' %}"></script>
 
 
 
