--- a/produtor_rural/templates/produtor/dashboard.html
+++ b/produtor_rural/templates/produtor/dashboard.html
@@ -11,113 +11,63 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <style>
-        .custom-container {
-            background-color: #0e64bb;
-            /* Cinza claro */
-            border-radius: 10px;
-            /* Bordas arredondadas */
-            padding: 20px;
-            /* Espaçamento interno */
-            margin-bottom: 20px;
-            /* Espaçamento inferior */
-        }
-    </style>
-
 </head>
-
-
 
 <body>
 
-    <div>
+    <h2>Resumo</h2>
 
-        <div class="container text-center .custom-container">
-            <h1>Dashboard do produtor</h1>
-            <div class="row">
+    <div class="container">
+        <p>Total de Fazendas: {{ total_fazendas }}</p>
+        <p>Área Total em Hectares: {{ area_total }}</p>
+        
+        {% load custom_filters %}
+        <h3>Fazendas por Estado</h3>
+        <ul>
+            {% for item in estado_count %}
+            <li>{{ item.estado }}: {{ item.count }}</li>
+            {% endfor %}
+        </ul>
 
-                <div class="col md-6">
+        <p id="estado_count" style="display: nome;">{{ estado_count }}</p>
 
-                    <!-- <canvas id="graficoUsoSolo"></canvas>
+         <h3>Culturas de plantio</h3>
+        <ul>
+            {% for item in cultura_count %}
+            <li>{{ item.culturas }}: {{ item.count }}</li>
+            {% endfor %}
+        </ul>
 
-                    <script>
-                        const area_agricultavel = {{ area_agricultavel| safe }};
-                        const area_vegetacao = {{ area_vegetacao| safe }};
-                    </script>
-                    <script src="{% static 'js/chart-uso-solo.js' %}"></script> -->
 
-
-                </div>
-
-                <div class="col md-6">
-                    <!-- <script type="application/json" id="estado-data">
-                        {{ estado_count|json_script:"estado_count" }}
-                    </script>
-                    
-                    <canvas id="graficoEstados"></canvas>
-                    <script src="{% static 'js/chart-estados.js' %}"></script>
-               -->
-                </div>
-
-                <div class="col">
-                    Column
-                </div>
-            </div>
-        </div>
+        <h3>Uso de Solo</h3>
+        <ul>
+            <li>Agricultável: {{ area_agricultavel }} hectares</li>
+            <li>Vegetação: {{ area_vegetacao }} hectares</li>
+        </ul>
 
     </div>
 
+<hr/>
 
+    <div class="container">
 
+        <h2>Detalhes (lista de cadastros)</h2>
 
-    <p>Total de Fazendas: {{ total_fazendas }}</p>
-    <p>Área Total em Hectares: {{ area_total }}</p>
+        <h3>Produtores</h3>
+        <ul>
+            {% for produtor in produtores %}
+            <li>{{ produtor.nome }}</li>
+            {% endfor %}
+        </ul>
 
-    <h2>Produtores</h2>
-    <ul>
-        {% for produtor in produtores %}
-        <li>{{ produtor.nome }}</li>
-        {% endfor %}
-    </ul>
+        <h3>Fazendas</h3>
+        <ul>
+            {% for fazenda in fazendas %}
+            <li>{{ fazenda.nome }} - {{ fazenda.cidade }} - {{ fazenda.estado }}</li>
+            {% endfor %}
+        </ul>
+    </div>
 
-    <h2>Fazendas</h2>
-    <ul>
-        {% for fazenda in fazendas %}
-        <li>{{ fazenda.nome }} - {{ fazenda.cidade }} - {{ fazenda.estado }}</li>
-        {% endfor %}
-    </ul>
-
-
-    {% load custom_filters %}
-    <h2>Gráfico por Estado</h2>
-    <ul>
-        {% for item in estado_count %}
-        <li>{{ item.estado }}: {{ item.count }}</li>
-        {% endfor %}
-    </ul>
-
-    <p id="estado_count" style="display: nome;">{{ estado_count }}</p>
-
-    <!-- <img id="estado_chart" src="data:image/png;base64,{% url 'generate_chart' %}" alt="Gráfico por Estado"> -->
-
-
-    <img id="estado_chart" src="{% url 'generate_chart' %}" alt="Gráfico por Estado">
-    
-
-
-
-    <h2>Gráfico por Cultura</h2>
-    <ul>
-        {% for item in cultura_count %}
-        <li>{{ item.culturas }}: {{ item.count }}</li>
-        {% endfor %}
-    </ul>
-
-    <h2>Gráfico por Uso de Solo</h2>
-    <ul>
-        <li>Agricultável: {{ area_agricultavel }} hectares</li>
-        <li>Vegetação: {{ area_vegetacao }} hectares</li>
-    </ul>
 
 
 
