feat: generate farm chart

--- a/produtor_rural/templates/home.html
+++ b/produtor_rural/templates/home.html
@@ -141,7 +141,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
-                        <img id="estado_chart" src="{% url 'generate_chart' %}" alt="Gráfico por Estado"
+                        <img id="estado_chart" src="{% url 'generate_bar_chart_farms_per_state' %}" alt="Gráfico por Estado"
                             class="card-img-top" data-bs-toggle="modal" data-bs-target="#imageModal">
                         <div class="card-body">
                             <h5 class="card-title">Fazendas por UF</h5>
@@ -181,7 +181,7 @@
                 
                 <div class="col-md-6">
                     <div class="card">
-                        <img id="estado_chart" src="{% url 'generate_pie_chart_solo_usage' %}" alt="Gráfico por Estado"
+                        <img id="estado_chart" src="{% url 'generate_pie_chart_solo_usage' %}" alt="Uso do solo"
                         class="card-img-top" data-bs-toggle="modal" data-bs-target="#imageModal">
                         <div class="card-body">
                             <h5 class="card-title">Uso do solo</h5>
