clean: clean code write, renaming variables, inserte comments marks and removed old blocks comented codes

--- a/produtor_rural/templates/home.html
+++ b/produtor_rural/templates/home.html
@@ -135,6 +135,8 @@
         </div>
     </section>
 
+    <!-- FARM PER STATE CHARTS -->
+
     <section id="producao-uf" class="rounded-section bg-light">
         <div class="container">
             <h2>Fazendas por UF</h2>
@@ -151,7 +153,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card">
-                        <img id="estado_pie_chart" src="{% url 'generate_pie_chart' %}" alt="Gráfico por Estado"
+                        <img id="estado_pie_chart" src="{% url 'generate_pie_chart_farms_per_state' %}" alt="Gráfico por Estado"
                             class="card-img-top" data-bs-toggle="modal" data-bs-target="#imageModal">
                         <div class="card-body">
                             <h5 class="card-title">Fazendas por UF</h5>
@@ -163,6 +165,7 @@
         </div>
     </section>
 
+<!-- PLANTED TYPE CHATS -->
 
     <section id="culturas" class="rounded-section bg-light">
         <div class="container">
