--- a/produtor_rural/templates/home.html
+++ b/produtor_rural/templates/home.html
@@ -201,7 +201,7 @@
 
     <section id="culturas" class="rounded-section bg-light">
         <div class="container">
-            <h2>Culturas</h2>
+            <h2>Uso do Solo</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
