--- a/produtor_rural/templates/produtor/dashboard.html
+++ b/produtor_rural/templates/produtor/dashboard.html
@@ -15,9 +15,11 @@
 
 <body>
 
-    <h2>Resumo</h2>
+<p><a href="/">Retornar para a página inicial</a></p>
+    <section>
 
     <div class="container">
+        <h2>Resumo</h2>
         <p>Total de Fazendas: {{ total_fazendas }}</p>
         <p>Área Total em Hectares: {{ area_total }}</p>
         
@@ -46,6 +48,8 @@
         </ul>
 
     </div>
+
+</section>
 
 <hr/>
 
