--- a/produtor_rural/templates/home.html
+++ b/produtor_rural/templates/home.html
@@ -326,11 +326,17 @@
 
 
     <!-- Charts -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
     <script>
         function downloadImages() {
             fetch('/download-images/')
                 .then(response => {
-                    alert('Gráficos Gerados/atualizados com sucesso\nAtualize a página para visualizar os novos gráficos');
+                    Swal.fire({
+                            icon: 'success',
+                            title: 'Sucesso',
+                            text: 'Gráficos gerados/atualizados com sucesso. Atualize a página para visualizar os novos gráficos.',
+                            confirmButtonText: 'Fechar'
+                        });
                 })
         }
     </script>
